--- a/style.css
+++ b/style.css
@@ -4,3 +4,37 @@ html, body {
     box-sizing: border-box;
     background: yellow;
 }
+
+header {
+    background: aquamarine;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+main {
+    background: blue;
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+
+aside {
+    background: red;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+
+footer {
+    background: green;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+
+.container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 20vh 70vh 10vh;
+    grid-template-areas: "h h" "a a" "f f";
+}
