--- a/SegundoTesteGrid/style.css
+++ b/SegundoTesteGrid/style.css
@@ -13,10 +13,13 @@ html, body {
     height: 100vh;
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px;
 
     grid-gap: 5px;
+
+    justify-content: space-evenly;
+    align-content: space-evenly;
 }
 
 .container > div {
